--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ html {
       rgba(255, 255, 255, 0.2),
       rgba(255, 255, 255, 0.3)
     ),
-    url(images/bg.jpeg) center no-repeat;
+    url(bg.jpeg) center no-repeat;
   background-size: cover;
   flex-direction: column;
 }
